PROLL-305 checked text sizes and corrected gaps in OurWork.js mobile screens

--- a/algrtm/src/styles/typography.css
+++ b/algrtm/src/styles/typography.css
@@ -58,6 +58,7 @@
     font-size: 2rem;
     font-weight: 500;
     line-height: 2.48rem;
+    font-style: normal;
   }
 
   .h5_small_bold {
